--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export":"next build && next export"
+    "export": "next build && next export"
   },
   "dependencies": {
+    "formidable": "^3.5.4",
     "lucide-react": "^0.488.0",
+    "mysql2": "^3.15.3",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
